Fix background color to improve visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,11 +42,10 @@
     background-color: #90ccdf;
 }
 
-
 body {
     font-family: Roboto, sans-serif;
     font-weight: 300;
-    background-color: #525252;
+    background-color: #fff;
     color: #555555;
 }
 
@@ -306,7 +305,7 @@ footer {
     font-weight: 400;
     padding: 3px 30px 2px 10px;
     color: #fafafa;
-    background-color: rgba(190, 133, 133, 0.2);
+    background-color: #4e8799;
 }
 
 .progress-section {
